docs(docs-main): fix heading anchor link visibility on hover

--- a/src/docs/components/docs-main/docs-main.css
+++ b/src/docs/components/docs-main/docs-main.css
@@ -504,7 +504,11 @@
     visibility: visible;
   }
 
-  @media screen and (max-width: 48rem) and (hover: none) {
+  @media screen and (hover: none) {
+    visibility: inherit;
+  }
+
+  @media screen and (max-width: 48rem) {
     visibility: inherit;
     padding-right: 0;
 
